# Voice-Bridge-Pathology

./: .gitignore  API  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog  Contributing  DOCUMENTATION_INDEX.md  Dockerfile  Documentation Index  FILES_UPDATE_GUIDE_v2.md  INSTALL.md  Installation Guide  License  Makefile  PROJECT_DOCUMENTATION_SUMMARY.md  README.md  Roadmap  SECURITY.md  TROUBLESHOOTING.md  Troubleshooting  UPGRADE.md  USAGE.md  Usage  VBC_v222.py  VBC_v223.py  VBC_v224.py  VBC_v225.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  uninstall.sh  voice_bridge_app_v2.py  voice_bridge_app_v201.py  voice_bridge_app_v203.py  voice_bridge_app_v21.py  voice_bridge_app_v213.py  voice_bridge_v220.py  voice_bridge_v221.py
.github/ISSUE_TEMPLATE/: security_vulnerability.md
config/: voice_bridge_config.ini  voice_bridge_config_v2.ini.example
config/diccionarios/: frases_completas.txt  patologia_molecular.txt
docker/: entrypoint.sh  nginx.conf  supervisord.conf
docs/: Architecture  DICTATION_MODE.md  HIPAA_COMPLIANCE.md  VOICE_COMMANDS.md
examples/: README.md  backup_config.sh  validate_config.sh  voice_bridge_config_example.ini
scripts/: maintenance.sh  migrate.sh  monitor.sh  upgrade_to_v2.sh
test/: Readme
tests/: conftest.py
tests/unit/: test_medical_terms.py
voice-bridge-claude/: start_voice_bridge.sh  start_voice_bridge_direct.sh  start_voice_bridge_gui.sh  start_voice_bridge_launcher.sh  start_voice_bridge_standalone.sh
voice-bridge-claude/.github/: pull_request_template.md
voice-bridge-claude/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  medical_terminology.md
voice-bridge-claude/.github/workflows/: ci-cd.yml
voice-bridge-claude/logs/: transcripciones_patologia_20250706_230115.txt  transcripciones_patologia_20250706_234054.txt  transcripciones_patologia_20250707_000247.txt  transcripciones_patologia_20250707_002744.txt  transcripciones_patologia_20250707_003323.txt  transcripciones_patologia_20250707_023502.txt
voice-bridge-claude/scripts/: agregar_termino_medico.sh  test_azure_connection.sh
voice-bridge-claude/voice-bridge-project/: main.py  pyproject.toml  voice_bridge_app.py
voice-bridge-claude/voice-bridge-project/voice_bridge_claude.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
